# bi_etl

./: .gitignore  LICENSE  README.md  bitbucket-pipelines.yml  config.ini  environment.yml  example_config.ini  install_local_cw.cmd  linux_environment.yml  merge_junit_files.py  old_environment.yml  old_setup.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: unit_test.yml
.run/: pytest Keyword Search.run.xml  pytest for tests.run.xml  pytest.run.xml  tox TestHstTablePostgres and test_iu_nosrgt_del.run.xml  tox path Oracle.run.xml  tox.run.xml
bi_etl/: __init__.py  __main__.py  bi_config_parser.py  conversions.py  example_config.ini  example_config_shared.ini  memory_size.py  setup.py  setup.py.orig  statement_queue.py  statistics.py  timer.py  version.py
bi_etl/bulk_loaders/: bulk_loader.py  postgresql_copy.py  redshift_s3_avro_loader.py  redshift_s3_base.py  redshift_s3_csv_loader.py  redshift_s3_json_loader.py  redshift_s3_parquet_loader.py  s3_bulk_load_config.py  sql_server_bcp.py
bi_etl/components/: csv_writer.py  csvreader.py  data_analyzer.py  etlcomponent.py  hst_table.py  hst_table_source_based.py  pyarrow_dataset_reader.py  readonlytable.py  sqlquery.py  table.py  w3c_reader.py  xlsx_reader.py  xlsx_writer.py
bi_etl/config/: bi_etl_config_base.py  notifiers_config.py
bi_etl/database/: connect.py  database_metadata.py  mock_connect.py  mock_database_metadata.py
bi_etl/exceptions/: __init__.py
bi_etl/informatica/: exceptions.py  pmcmd.py  pmcmd_task.py  pmrep.py
bi_etl/lookups/: autodisk_lookup.py  autodisk_range_lookup.py  disk_lookup.py  disk_range_lookup.py  lookup.py  non_unique_lookup.py  range_lookup.py  sqlite_lookup.py  sqlite_range_lookup.py
bi_etl/notifiers/: email.py  jira.py  log_notifier.py  notifier.py  notifier_base.py  notifier_retry.py  slack.py
bi_etl/parameters/: file_parameter.py
bi_etl/performance_test/: perftest_static_reader.py
bi_etl/scheduler/: dependent_reasons.py  etl_task.py  etl_task_status_cd.py  exceptions.py  messages.py  models.py  queue_io.py  scheduler.py  scheduler_interface.py  sdtout_queue.py  special_tasks.py  status.py  task.py
bi_etl/tests/: _test_base_database.py  _test_base_lookup.py  _test_base_range_lookup.py  debug_sa_objects.py  dummy_etl_component.py  sqlite_db.py  test_autodisk_lookup.py  test_autodisk_range_lookup.py  test_bi_config_parser.py  test_csvreader.py  test_dict_to_str.py  test_disk_lookup.py  test_disk_range_lookup.py  test_hst_table.py  test_hst_table_source_based.py  test_lookup.py  test_range_lookup.py  test_row.py  test_row_case_insensitive.py  test_scheduler.py  (+4 more)
docs/: Makefile  autobuild.cmd  gen_api.bat  gen_api.cmd  make.bat  make.bat - html.lnk  make_wiki.cmd  make_wiki.py  rebuild_all.cmd
example_config/: example_config.ini
example_config_files/: config.ini
example_dagster_codebase/: __init__.py  run_dagster_windows.py
examples/: config.ini  config_shared.ini  example_analyzer.py  example_config.ini  example_config.py  example_etl_1.py  example_etl_2.py  example_etl_base.py  test_config_file.py
tests/: _test_base_database.py  _test_base_lookup.py  _test_base_range_lookup.py  config(example).env  config_for_tests.py  conftest.py  debug_sa_objects.py  dummy_etl_component.py  print_test_list.py  pytest.ini  test_autodisk_lookup.py  test_autodisk_range_lookup.py  test_bi_config_parser.py  test_config (example).ini  test_csvreader.py  test_dict_to_str.py  test_disk_lookup.py  test_disk_range_lookup.py  test_hst_table.py  test_hst_table_source_based.py  test_lookup.py  test_range_lookup.py  test_row.py  test_row_case_insensitive.py  test_scheduler.py  test_scheduler_live.py  test_statistics.py  test_table.py  test_task.py  test_xls_reader.py
(+372 files in other folders)
