[project]
name = "bi_etl"
version = "1.8.2"
description = "Python ETL Framework"
keywords = ["etl"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Database",
]
authors = [
    { name = "Derek Wood", email = "bietl_info@bietl.dev" },
]
documentation = "https://bietl.dev/docs/"
readme = "README.md"
license = "MIT"
repository = "https://github.com/arcann/bi_etl"
requires-python = ">=3.10"

dependencies = [
    "config-wrangler[aws]>=1.3",
    "SQLAlchemy>=1.4.49",
    "semidbm>=0.5.1",
    "psutil>=5.7.2",
    "openpyxl>=3.0.5",
    "btrees>=4.7.2",
    "gevent>=21.8.0",
    "sqlparse>=0.4.2",
    "pydicti>=1.1.6",
    "more-itertools>=9.0.0",
]

[tool.poetry.dependencies]
# Python upper bound needed for locking versions
python = ">=3.10,<4.0"

[project.optional-dependencies]
# Install with:
# poetry install -E keyring

keyring = ["keyring>=21.1.0"]

pykeepass = ["pykeepass>=4.0.6"]

jira = ["jira>=3.1.1"]

slack = ["slack-sdk>=3.19.5"]

dagster = ['dagster>=1.5.7', 'dagster-webserver>=1']

redshift = ['pyarrow>=10.0.1', 'psycopg2']

avro = ['fastavro>=1.0.0']

all = ['keyring', 'pykeepass', 'jira', 'slack', 'dagster', 'dagster-webserver', 'psycopg2']

# Used by .github/workflows/unit_test.yml
# poetry install -E test
test = ["psycopg2", "testcontainers"]

[tool.poetry.group.dev.dependencies]
# Keep boto3 fairly current to avoid scanning a huge list of versions
boto3 = ">=1.40"
dagster = ">=1.5.7"
dagster-webserver = ">=1.6.3"
fastavro = ">=1.5.3"
junitparser = "^3.2"
junit2html = "^31.0"
numpy = ">=1.25.1"
oracledb = ">=1.2.0"
paramiko = "*"  # For docker ssh:// support
pip = ">=22.1.2"
psycopg = {version = "^3.1.18", extras = ["binary"]}
pyarrow = ">=12.0.1,<15.0.0"
pykeepass = ">=4.0.5"
pylint = "^3.3.8"
pytest = "^7.4.1"
pytest-xdist = "^3.6.1"
slack-sdk = ">=3.19.5"
sphinx-autobuild = "^2021.3.14"
testcontainers = {version = ">=3.5.4", extras = ["mysql, oracle, postgresql, mssqlserver"]}
toml = "^0.10.1"
tox = "^4.6.4"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = ">=7.2.2"
sphinx-paramlinks = ">=0.5.4"
# Has not been updated for pydantic 2
# sphinx-pydantic = ">=0.1.1"
# sphinx-autodoc-annotation = "^1.0-1"
autodoc-pydantic = ">=2.0.1"
sphinx-rtd-theme = ">=1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-n=auto"
testpaths = [
    "tests",
]

[tool.pylint.MAIN]
max-line-length = 120
load-plugins = "pylint.extensions.bad_builtin"

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "too-many-lines",
    "too-many-instance-attributes",
    "too-many-statements",
    "too-many-nested-blocks",
    "too-many-branches",
    "too-many-arguments",
    "too-many-public-methods",
    "no-else-return",
    "logging-fstring-interpolation",
]
